2009-09-29  Larry Ewing  <lewing@novell.com>

	* border.cpp (InsideObject): improve Border::InsideObject to
	handle the actual drawn bounds.

	Fixes #2022.

	r: jackson
	
2009-09-29  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (PostOnKeyDown): Renamed from OnCharacterKeyDown()
	to be more consistent with the managed method names. Don't set
	Handled to true, since anything that makes it this far should also
	bubble up.

	r:toshok

2009-09-28  Andreia Gaita  <avidigal@novell.com>

	* application.cpp, bitmapimage.cpp,
	  file-downloader.cpp, fontmanager.cpp,
	  pipeline-ui.cpp, pipeline.cpp,
	  utils.cpp: uniform usage of glib io calls

	r: toshok

2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* window-gtk.cpp: gtk_window_destroy can cause reentry, so ensure we leave
	the current deployment as it was when returning from it.

	r: lewing
	
2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp|h: When receiving markers from the pipeline, store them
	in a general list and only move them into a TimelineCollection just before
	checking if they are to be emitted. This avoids locking a mutex during a
	potentially large time, as well as trying to emit an event on the pipeline
	thread (collection changed event when adding markers to the
	TimelineCollection).

	r: spouliot

2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: Follow refcounting rules with the AlsaPlayer.

	r: alan

2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: AudioPlayer::Shutdown: no need to unref with the mutex
	locked. CreateInstance: Add a couple of comments.

	r: alan

2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp|h: No need for the downloaders field to be a pointer
	when it'll always exist. Move the downloader abort code to the node's
	destructor, this way we ensure that the downloader is always aborted.
	Reinitialize: clear the downloaders list instead of creating a new one
	(and leaking the previous one).